x added: `ENCRYPTREQ(req, val, [key], [strict])` to encrypt value according to the request meta data
x added: `DECRYPTREQ(req, val, [key])` to decrypt value according to the request meta data
x added: `controller.nocache()`
x added: `controller.nocontent()`
x added: `REPO` as a global variable
x added: `MAIN` as a global variable
- added: `PREF.set(name, [value])` (read+write) or `PREF.propname` (only read) for reading/writing a persistent preferences
- added: `F.onPrefSave = function(obj)` to write preferences
- added: `F.onPrefLoad = function(next(obj))` to read preferences
x added: `RESTBuilder.url(url)` which returns a new instance of `RESTBuilder` for chaining
x added: `restbuilder.keepalive()` enables a keepalive for `RESTBuilder` instance
- added: `SESSION()` management, more in docs
x added: `controller.sessionid` with ID of `SESSION()`
x added: `AUTH()` supports a new auth declaration with `$` as `AuthOptions` like `SchemaOptions` or `OperationOptions`
x added: `AuthOptions` to prototypes
x added: `ErrorBuilder.length` property (alias for `instance.items.length)
x added: Schemas `prepare` supports `req` argument
- added: `F.currencies.eur = function(val) {}` registers a currency formatter
- added: usage of currency formatter `Number.currency(currency)`
x added: new schema type `Number2` with default value is `null`, not zero `0`
x added: `@{json2(model, elementID, key1, key2, key3)}` can serialize data with keys defined into the `<script type="application/json">`
x added: schemas supports `PATCH` and `.setPatch()`, only specified field are processed
x added: `SchemaOptions` supports `$.keys` for `PATCH` method
x added: `schema.cl(name)` ("cl" means codelist) returns `{Array}` a list of values from defined enum/keyvalue
x added: `schema.props()` returns `{Object}` meta info about all defined properties
x added: `SchemaOptions`, `OperationOptions` and `TaskOptions` supports `$.req` and `$.res` properties